Add link to youtube in treinaments

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,6 @@ body{
   }
   
   .button-download {
-    margin-top: 20px; /* Adicione um espaçamento superior ao botão de download */
+    margin-top: 20px;
   }
   
